--- a/landingpages.css
+++ b/landingpages.css
@@ -18,6 +18,7 @@ header{
     background-image: linear-gradient(to bottom, #080808,#000000,#3d3131);
     opacity: 9;
 }
+
 .background-image{
     position: relative;
     height: 100vh;
@@ -52,6 +53,7 @@ nav a button{
     font-weight: bold;
     border: none;
 }
+
 .movies{
     /* border: 2px solid red; */
     width: 50%;
@@ -61,7 +63,7 @@ nav a button{
 .movies h1{
     color: white;
     font-weight: bold;
-    font-size: 3.2em;
+    font-size: 3em;
 }
 .movies h4{
     color: white;
@@ -89,18 +91,103 @@ nav a button{
 .fa-solid{
     color:#000000
 } 
-@media (max-width:1049px){
-    header{
-        flex-direction: column;
-    }
-}
 
 h2{
   color: white;
   font-size: 2em;
   padding-left: 170px;
   margin-bottom: 10px;
+
+}@media(max-width:511px){
+    .image{
+        width: 150px;
+    }
+
+    
 }
+@media(max-width:511px){
+    nav a button{
+        padding: 8px 10px;
+        font-size: 0.8em;
+        font-weight: 300;
+    }
+}
+@media(max-width:1049px){
+    .movies h1{
+        font-weight:200;
+        font-size: 2.5em;
+    }
+}
+@media(max-width:740px){
+    .movies h1{
+        font-weight:200;
+        font-size: 2em;
+    }
+
+}
+@media(max-width:604px){
+    .movies h1{
+        font-weight:200;
+        font-size: 1.5em;
+    }
+}
+@media(max-width:438px){
+    .movies h1{
+        font-weight:200;
+        font-size: 1em;
+    }
+}
+@media(max-width:740px){
+    .movies input{
+        padding: 12px 46px;
+        margin-bottom: 10px;
+        padding-left: 20px;
+        justify-content: center;
+    }
+}
+@media(max-width:500px){
+    .movies input{
+        padding: 10px 40px;
+        padding-left: 24px;
+       
+    }
+}
+@media(max-width:435px){
+    .movies input{
+        padding-left: 30px;
+    }
+
+}
+@media(max-width:403px){
+    .movies input{
+        padding-left: 60px;
+    }
+
+}
+ @media(max-width:335px){
+    .movies input{
+        padding-left: 70px;
+    }
+
+}
+   
+
+@media(max-width:426px){
+    .movies input{
+        padding: 8px 30px;
+        margin-bottom: 12px;
+        padding-left: 28px;
+        
+    }
+}
+@media(max-width:340px){
+    .movies input{
+        padding: 10px 26px;
+        justify-content: center;
+    }
+}
+
+/* sect-2   */
 .sect-2{
   margin: auto;
   margin-bottom: 100px;
@@ -167,6 +254,8 @@ h2{
     font-family: 'Gill Sans', sans-serif;
     font-size: 1.2em;
   }
+
+  
   .footer-wrap{
     display: flex;
     gap:2em;
